<resources>
    <string name="app_name">LibrarySystem-Android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="col0">ID</string>
    <string name="col1">Title</string>
    <string name="col2">Author</string>
    <string name="col3">Availability</string>
    <string name="books">Books</string>
    <string name="bookID">ID</string>

    <string name="albums">Albums</string>
    <string name="albumTitle">Title</string>
    <string name="albumArtist">Artist</string>
    <string name="albumID">ID</string>

    <string name="movies">Movies</string>
    <string name="movieTitle">Title</string>
    <string name="movieDirector">Director</string>
    <string name="movieID">ID</string>

    <string name="newspaper">Newspapers</string>
    <string name="newspaperName">Name</string>
    <string name="newspaperDate">Date</string>
    <string name="newspaperID">ID</string>

    <string name="journals">Journals</string>
    <string name="journalsName">Name</string>
    <string name="journalsDate">Date</string>
    <string name="journalID">ID</string>

    <string name="borrowedItemsPageHeader">BORROWED ITEMS</string>

    <string name="viewContentsPageHeader">VIEW LIBRARY CONTENTS</string>
</resources>