<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/viewContentsPageHeader"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/books_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/books_table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="10dp"
        android:stretchColumns="*"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/albums_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:ignore="MissingConstraints">

        <TableRow
            android:background="@drawable/border"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/books"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </TableRow>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="none"
            android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">
        <TableRow
            android:id="@+id/books_info"
            android:background="@drawable/darkborder"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </TableRow>
        </LinearLayout>
        </ScrollView>
    </TableLayout>

    <TableLayout
        android:id="@+id/albums_table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="10dp"
        android:stretchColumns="*"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/movies_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/books_table"
        tools:ignore="MissingConstraints">

        <TableRow
            android:background="@drawable/border"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/albums"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/albums_info"
            android:background="@drawable/darkborder"
            tools:ignore="MissingConstraints">
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/movies_table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="10dp"
        android:stretchColumns="*"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/newspapers_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albums_table"
        tools:ignore="MissingConstraints">

        <TableRow
            android:background="@drawable/border"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/movies"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/movies_info"
            android:background="@drawable/darkborder"
            tools:ignore="MissingConstraints">
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/newspapers_table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="10dp"
        android:stretchColumns="*"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/journals_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movies_table"
        tools:ignore="MissingConstraints">

        <TableRow
            android:background="@drawable/border"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/newspaper"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/newspapers_info"
            android:background="@drawable/darkborder"
            tools:ignore="MissingConstraints">
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/journals_table"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:stretchColumns="*"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newspapers_table"
        tools:ignore="MissingConstraints">

        <TableRow
            android:background="@drawable/border"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="5sp"
                android:text="@string/journals"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/journals_info"
            android:background="@drawable/darkborder"
            tools:ignore="MissingConstraints">
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
